Archive2/48/112b8efced056e/output
main.cpp:1:1: error: 'auto' return without trailing return type; deduced return types are a C++1y extension
auto main() { return 0; }
^
1 error generated.
